# Collatz-Sequence-Calculator

./: CMakeLists.txt  README.md
cmake/: AddGoogleTest.cmake
src/app/: CMakeLists.txt  main.cpp
src/controller/: CMakeLists.txt  controller.cpp  controller.hpp
src/core/: CMakeLists.txt  core.cpp  core.hpp
src/core/coreImpl/: CMakeLists.txt  coreImpl.cpp  coreImpl.hpp
src/core/model/: CMakeLists.txt  model.hpp
src/dialog/: CMakeLists.txt  dialog.cpp  dialog.hpp  dialog.ui
src/dialog/view/: CMakeLists.txt  view.hpp
src/timer/: CMakeLists.txt  Timer.hpp
tests/: CMakeLists.txt  test_coreImpl.cpp
